--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
     "swr": "^1.0.1",
