--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "personal-website",
-  "version": "1.0.1",
-  "private": true,
+  "version": "1.1.0",
+  "private": false,
+  "license": "MIT",
+  "author": {
+    "email": "info@nbank.dev",
+    "name": "Noel Bank",
+    "url": "https://nbank.dev"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "classnames": "^2.3.1",
-    "dayjs": "^1.10.7",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
-    "react-router-transition": "^2.1.0",
+    "classnames": "2.3.1",
+    "dayjs": "1.10.7",
+    "node-sass": "6.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "4.3.1",
+    "react-router-dom": "5.3.0",
+    "react-router-transition": "2.1.0",
     "react-scripts": "4.0.3",
-    "react-typed": "^1.2.0",
-    "swr": "^1.0.1",
-    "web-vitals": "^1.1.2"
+    "react-typed": "1.2.0",
+    "swr": "1.0.1"
   },
   "scripts": {
     "start": "PORT=3011 react-scripts start",
