--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://nbank.dev"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
     "classnames": "2.3.1",
     "dayjs": "1.10.7",
     "node-sass": "6.0.1",
